contact readability fix

--- a/css/contactstyle.css
+++ b/css/contactstyle.css
@@ -171,7 +171,10 @@ body {display: table; width: 100%; height: 100%;}
 }
 .content {margin:0px;  padding: 5% 15%;}
 
-.content h2, h3, p {padding: 5% 2%;}
+.content p {padding: 5px 0px;}
+
+.content h2, h3 {padding: 25px 0px;}
+
 
 
 .content p a {text-decoration: none; color:black;}
@@ -311,6 +314,8 @@ only screen and (min-resolution: 192dpi) and (max-width: 768px), only screen and
     -ms-transform: rotate(-45deg);
     -o-transform: rotate(-45deg);
     transform: rotate(-45deg);}
+
+
 
     .container {
       width: 100%;
